changes to work exp for mobile display, temp fix for off center of timeline-container in second media query w/ margin-right 5%

--- a/styling.css
+++ b/styling.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -234,6 +234,11 @@ li {
   font-family: Esteban, serif;
 }
 
+.personal-interests-container ul {
+  list-style: none;
+  padding-left: 0;
+}
+
 .personal-interests-container li {
   margin-bottom: 1rem;
 }
@@ -266,12 +271,12 @@ li {
 .technical-skills-desc {
   font-family: Monserrat, sans-serif;
   margin-top: 4rem;
-  width: 50%;
+  width: 65%;
 }
 
 .gen-languages-container {
   display: flex;
-  width: 60%;
+  width: 70%;
   justify-content: space-around;
   gap: 3rem;
 }
@@ -315,6 +320,9 @@ li {
 
 .work-exp-container {
   display: flex;
+  width: 90vw;
+  margin-left: auto;
+  margin-right: auto;
   padding: 2rem .2rem 0 .2rem;
   margin-bottom: 0;
   flex-direction: column;
@@ -322,7 +330,6 @@ li {
   gap: 2rem;
   text-align: center;
   color: #222;
-  max-width: 100%;
 }
 
 
@@ -333,7 +340,7 @@ li {
 .timeline-container {
   display: grid;
   width: 65vw;
-  grid-template-columns: 1fr .01fr 1fr;
+  grid-template-columns: 1fr .5rem 1fr;
   grid-template-rows: repeat(3, auto);
 }
 
@@ -360,10 +367,6 @@ li {
 
 .timeline-element h5 {
   font-weight: 700;
-}
-
-.timeline-element > p {
-  width: 100%;
 }
 
 .timeline-line {
@@ -667,7 +670,7 @@ input, textarea {
 
 /* Media Query */
 
-@media (max-width: 1000px){
+@media (max-width: 1150px){
   
 
   .hero-container {
@@ -720,6 +723,7 @@ input, textarea {
   .about-me-container{
     display: flex;
     flex-direction: column;
+    padding: 0 2rem 3rem 2rem ;
   }
 
   .about-me-title {
@@ -730,10 +734,69 @@ input, textarea {
     flex-direction: column;
   }
 
-  .timeline-container {
-    width: 95%;
+
+  .gen-languages-container {
+    gap: 1rem;
   }
 
+  .gen-languages-container > h4 {
+    letter-spacing: .05em;
+    font-size: .8em;
+  }
+
+}
+
+@media (max-width: 800px) {
+  
+  .about-me-container {
+    padding: 1rem;
+  }
+
+  .about-me-container img {
+    padding-left: 0;
+    border-radius: 0;
+  }
+
+  
+  .work-exp-container {
+    width: 80vw;
+  }
+
+  .timeline-container {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    width: 65vw;
+    margin-right: 5%;
+  }
+
+  .timeline-element{
+    padding: .5rem 1.5rem 1.5rem 1.5rem;
+    width: 65vw;
+    margin-bottom: 2rem;
+  }
+
+  .timeline-line {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .leaf-img {
+    display: none;
+  }
+
+  .OIT-exp {
+    margin-left: 0;
+  }
+
+  .IVI-lab-exp, .Wakefern-exp {
+    margin-right: 0;
+  }
+  
+
+  .dirt-div {
+    display: none;
+  }
 }
 
 
